--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,8 @@
 .headerMain {
     background-color: #04151F;
     padding: 2rem 6rem;
+    display: flex;
+    justify-content: center;
 }
 
 .headerContent {
