--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -2,6 +2,7 @@
     padding: 2rem 6rem;
     display: flex;
     justify-content: right;
+    max-width: 1500px;
 }
 .workContent {
     width: 310px;
