social and link update

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -67,6 +67,11 @@
     font-weight: 400;
     line-height: normal;
 }
+.bodyButtons button:hover {
+    cursor: pointer;
+    background: #DC8A10;
+    color: #FFF;
+}
 
 .bodyButtons {
     display: flex;
