--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,17 @@ a:hover {
     color: #f5f5f5;
     cursor: pointer;
 }
+
+
+
+
+@media screen and (max-width: 550px) {
+    .navClicks {
+        padding: 2rem 1rem;
+    }
+    .next, .prev {
+        width: 150px;
+        height: 50px;
+        font-size: 12px;
+    }
+}
